# qaas-crossfit

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
crossfit/: __init__.py
crossfit/commands/: command.py  command_builder.py
crossfit/executors/: __init__.py  executor.py  executor_factory.py  local_executor.py
crossfit/models/: __init__.py  command_models.py  tool_models.py
crossfit/refs/: __init__.py
crossfit/tools/: dotnet_coverage.py  jacoco.py  tool.py  tool_factory.py
sanity_tests/: test_dotnet_coverage.py  test_jacoco.py
testing/: conftest.py
testing/sanity/: test_dotnet_coverage.py  test_jacoco.py
testing/unit-tests/command_tests/: test_command.py  test_command_builder.py
testing/unit-tests/executors_tests/: test_executor.py  test_local_executor.py
testing/unit-tests/tools_tests/: test_dotnet_coverage.py  test_jacoco.py  test_tool.py
testing/unitests/command_tests/: test_command_builder.py
testing/unitests/executors_tests/: test_executor.py
testing/unitests/tools_tests/: test_jacoco.py
tests/: __init__.py  test_command.py
tests/command_tests/: test_command.py  test_command_builder.py
tests/executors_tests/: test_executor.py  test_local_executor.py
tests/sanity_tests/: test_dotnet_coverage.py
tests/tools_tests/: test_dotnet_coverage.py  test_jacoco.py  test_tool.py
