[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crossfit"
dynamic = ["version"]
description = "A unified interface for various code coverage tools (JaCoCo, dotnet-coverage)"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools-scm]

[tool.setuptools.packages.find]
include = ["crossfit*", "testing*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
